tests/single_instruction_translation_validation/mcsema/register-variants/pabsd_xmm_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:191:13: error: use of undefined value '@my.lifetime.end'
  call void @my.lifetime.end(i64 16, i8* nonnull %12)
            ^
0.01user 0.01system 0:00.03elapsed 106%CPU (0avgtext+0avgdata 27812maxresident)k
0inputs+16outputs (0major+3245minor)pagefaults 0swaps
